--- a/style.css
+++ b/style.css
@@ -74,10 +74,7 @@ h1 {
     align-items: center;
 }
 
-.imgchosen-machine {
-    display: flex;
-}
-
+.imgchosen-machine,
 .imgchosen-player {
     display: flex;
 }
@@ -92,43 +89,21 @@ h1 {
     flex-direction: row-reverse;
 }
 
-.scissorstomove-Player {
-    width: 80px;
-    position: absolute;
-    display: none;
-}
-
-.rocktomove-Player {
-    width: 80px;
-    position: absolute;
-    display: none;
-}
-
+.scissorstomove-Player,
+.rocktomove-Player,
 .papertomove-Player {
     width: 80px;
     position: absolute;
     display: none;
 }
 
-.papertomove-Machine {
-    width: 80px;
-    position: absolute;
-    display: none;
-  
-}
-
-.rocktomove-Machine {
-    width: 80px;
-    position: absolute;
-    display: none;
-   
-}
-
+.papertomove-Machine,
+.rocktomove-Machine,
 .scissorstomove-Machine {
     width: 80px;
     position: absolute;
     display: none;
-   
+
 }
 
 .moveselector {
@@ -164,6 +139,7 @@ h1 {
     display: flex;
     flex-direction: column;
     gap: 15px;
+    align-items: center;
 }
 
 .img-box img {
@@ -217,4 +193,56 @@ button:hover {
     box-shadow: 0px 0px 20px #f84e95;
     cursor: pointer;
     font-size: 36px;
+}
+
+@media (max-width: 561px) {
+    h1 {
+        font-size: 25px;
+        margin-top: 75px;
+    }
+
+    .score {
+        gap: 80px;
+    }
+
+    .score p {
+        font-size: 32px;
+        padding: 8px 20px;
+    }
+
+    .moveselector h2 {
+        font-size: 18px;
+    }
+
+    .img-box img {
+        width: 90px;
+    }
+
+    .img-box img:hover {
+        width: 95px;
+    }
+
+    .scissorstomove-Player,
+    .rocktomove-Player,
+    .papertomove-Player {
+        width: 45px;
+        position: absolute;
+        display: none;
+        top: 5px;
+    }
+
+    .papertomove-Machine,
+    .rocktomove-Machine,
+    .scissorstomove-Machine {
+        width: 45px;
+        position: absolute;
+        display: none;
+        top: 5px;
+    }
+}
+
+@media (max-width: 361px){
+        .img-box img {
+        width: 80px;
+    }
 }
