--- a/style.css
+++ b/style.css
@@ -201,7 +201,8 @@ h1 {
     text-shadow: 0px 0px 15px #0079ff;
 }
 
-button {
+
+.StartGame {
     display: none;
     margin-top: 50px;
     background-color: rgba(0, 0, 0, 0);
@@ -217,7 +218,7 @@ button {
     transition: font-size .2s ease-in;
 }
 
-button:hover {
+.StartGame:hover {
     background-image: radial-gradient(circle, rgb(253, 91, 188) 0%, rgb(253, 99, 145) 28%);
     -webkit-background-clip: text;
     color: #12002f00;
