--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ h1 {
     background-image: radial-gradient(circle, rgba(255, 0, 153, 1) 0%, rgba(255, 0, 77, 1) 28%);
     -webkit-background-clip: text;
     color: #12002f00;
-    margin-top: 140px;
+    margin-top: 85px;
     text-shadow: 2px 2px 43px #ff0069;
     font-size: 45px;
     padding: 15px 20px;
@@ -201,13 +201,40 @@ h1 {
     text-shadow: 0px 0px 15px #0079ff;
 }
 
+.room-setup{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    text-align: center;
+}
 
-.StartGame {
-    display: none;
-    margin-top: 50px;
+#RoomInput{
+    height: 20px;
+    width: 150px;
+    text-align: center;
+    margin-top: 20px;
+    background-image: radial-gradient(circle, rgba(255, 0, 153, 1) 0%, rgba(255, 0, 77, 1) 28%);
+    -webkit-background-clip: text;
+    color: #12002f00;
+    border: 2px solid #ff0069;
+    border-radius: 15px;
+    padding: 15px;
+}
+
+#RoomInput::placeholder{
+    font-size: 9px;
+    background-image: radial-gradient(circle, rgba(255, 0, 153, 1) 0%, rgba(255, 0, 77, 1) 28%);
+    -webkit-background-clip: text;
+    color: #12002f00;
+}
+
+
+.buttonEnter {
     background-color: rgba(0, 0, 0, 0);
-    font-size: 35px;
-    padding: 20px 50px;
+    font-size: 15px;
+    padding: 14px 14px;
     border: 4px solid #ff0069;
     border-radius: 15px;
     box-shadow: 0px 0px 20px #ff0069;
@@ -218,7 +245,7 @@ h1 {
     transition: font-size .2s ease-in;
 }
 
-.StartGame:hover {
+.buttonEnter:hover {
     background-image: radial-gradient(circle, rgb(253, 91, 188) 0%, rgb(253, 99, 145) 28%);
     -webkit-background-clip: text;
     color: #12002f00;
@@ -226,7 +253,7 @@ h1 {
     border: 4px solid #f84e95;
     box-shadow: 0px 0px 20px #f84e95;
     cursor: pointer;
-    font-size: 36px;
+    font-size: 17px;
 }
 
 @media (max-width: 600px){
