--- a/style.css
+++ b/style.css
@@ -311,6 +311,27 @@ h1 {
 
 }
 
+@media (max-width: 580px){
+    .buttonEnter{
+        border: 4px solid #ffffff;
+    }
+}
+@media (max-width: 560px){
+    .buttonEnter{
+        border: 4px solid #020202;
+    }
+}
+@media (max-width: 540px){
+.buttonEnter{
+        border: 4px solid #ff0000;
+    }
+}
+@media (max-width: 520px){
+    .buttonEnter{
+        border: 4px solid #003cff;
+    }
+}
+
 @media (max-width: 431px){
     h1{
         font-size: 40px;
